fix: User Challenge return type 수정 -> 페이징 처리 삭제